--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./asserts/fonts/fonts.css">
 </head>
 <body>
+    <main>
     <h1>To Do List | DG</h1>
     <div class="content">
         <div class="content--add-item">
@@ -31,6 +32,7 @@
             </ul>
         </div>
     </div>
+</main>
 </body>
 <script src="script.js"></script>
 </html>
